fix comment word wrap, lowercase footer message

--- a/frontend/src/components/Post/Comments.css
+++ b/frontend/src/components/Post/Comments.css
@@ -34,6 +34,7 @@
   padding: 12px;
   font-size: 15px;
   white-space: pre-line;
+  overflow-wrap: break-word;
 }
 
 .comment-form-footer {
@@ -46,6 +47,7 @@
   margin-right: 12px;
   color: rgb(129, 142, 153);
   font-size: 13px;
+  text-transform: lowercase;
 }
 
 .comment-edit-textarea {
